# trql

./: Cargo.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  publish.yml
site/: Cargo.toml
site/src/: lib.rs  object.rs  tree.pest  tree.rs
site/web/: index.html  index.js  styles.css
src/: lib.rs  parser.rs  query.rs  tests.rs  tree.rs
src/tests/: tree.rs
trql/: Cargo.toml
trql/src/: chain.rs  command.rs  grammar.pest  lib.rs  parser.rs  query.rs  tests.rs  tree.rs
trql/src/tests/: tree.rs
trql_derive/: Cargo.toml
trql_derive/src/: lib.rs
