[package]
name = "trql"
version = "0.2.0"
authors = ["Rowan Clarke <36474636+rowanclarke@users.noreply.github.com>"]
license = "MIT"
description = "Query language for programmatically generating structures from trees."
edition = "2021"
repository = "https://github.com/rowanclarke/trql"
readme = "README.md"
keywords = ["tree", "search", "language"]

[dependencies]
dyn-clone = "1.0.17"
from-pest = "0.3.2"
newtype = "0.2.1"
pest = "2.7.13"
pest-ast = "0.3.4"
pest_derive = "2.7.13"
trql_derive = { version = "0.2.0", path = "../trql_derive" }

[dev-dependencies]

